--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="./assets/css/bootstrap.min.css" />
-    <link rel="stylesheet" href="./assets/fa5/css/all.css" />
+    <link rel="stylesheet" href="./assets/css/bootstrap/bootstrap.min.css" />
+    <link rel="stylesheet" href="./assets/css/fontawesome/css/all.css" />
     <link rel="stylesheet" href="./assets/css/style.css" />
     <!-- <link rel="icon" type="image/x-icon" href="./img/favicon.ico" /> -->
     <title>Nineod | Profesional Website Builder</title>
@@ -16,8 +16,8 @@
         class="navbar navbar-expand-lg navbar-light bg-white fixed-top navigation"
       >
         <div class="container-fluid">
-          <a class="navbar-brand me-0" href="#"
-            ><img src="./img/Logo_edited.png" alt="logo-nineod" width="85"
+          <a class="navbar-brand me-0" href="/"
+            ><img src="./img/Logo_edited.png" alt="logo-nineod" width="70"
           /></a>
 
           <button
@@ -38,20 +38,25 @@
           >
             <ul class="navbar-nav me-auto mb-2 mb-lg-0 nav nav-navbar">
               <li class="nav-item mx-2 mt-4 pt-2 px-2 item-nav active">
-                <a class="nav-link link-nav active" aria-current="page" href="#"
+                <a
+                  class="nav-link link-nav active page-scroll"
+                  aria-current="page"
+                  href="#home"
                   >Home</a
                 >
               </li>
               <li class="nav-item mx-2 mt-4 pt-2 px-2 item-nav fw-normal">
-                <a class="nav-link link-nav" href="#">About</a>
+                <a class="nav-link link-nav page-scroll" href="#about">About</a>
               </li>
               <li class="nav-item mx-2 mt-4 pt-2 px-2 item-nav">
-                <a class="nav-link link-nav" href="#">Projects</a>
+                <a class="nav-link link-nav page-scroll" href="#projects"
+                  >Projects</a
+                >
               </li>
               <li
                 class="nav-item mx-2 mt-4 pt-2 px-2 item-nav position-relative"
               >
-                <a class="nav-link link-nav" href="#">Service</a>
+                <a class="nav-link link-nav">Service</a>
                 <div class="dropdown-item">
                   <ul class="navbar-nav p-3 d-block">
                     <li class="nav-item w-100 item-nav text-center">
@@ -62,7 +67,9 @@
                       >
                     </li>
                     <li class="nav-item w-100 item-nav text-center">
-                      <a class="nav-link link-nav ps-1" href="#"
+                      <a
+                        class="nav-link link-nav ps-1"
+                        href="platform-builder.html"
                         >Platform Builder</a
                       >
                     </li>
@@ -70,7 +77,9 @@
                 </div>
               </li>
               <li class="nav-item mx-2 mt-4 pt-2 px-2 item-nav">
-                <a class="nav-link link-nav" href="#">Contact</a>
+                <a class="nav-link link-nav page-scroll" href="#contact"
+                  >Contact</a
+                >
               </li>
             </ul>
           </div>
@@ -84,7 +93,7 @@
       </nav>
     </header>
 
-    <section class="hero">
+    <section class="hero" id="home">
       <div class="container-fluid">
         <div
           class="hero-body d-flex flex-column justify-content-center text-center align-items-center text-white"
@@ -120,8 +129,15 @@
       />
     </a>
 
+    <div class="pagination-section">
+      <div class="page-item rounded-circle active"></div>
+      <div class="page-item rounded-circle"></div>
+      <div class="page-item rounded-circle"></div>
+      <div class="page-item rounded-circle"></div>
+    </div>
+
     <div class="container-fluid">
-      <section class="about py-5 d-flex flex-column">
+      <section class="about py-5 d-flex flex-column" id="about">
         <div class="about-body row mb-5">
           <div class="col-md-6 mb-4">
             <div class="about-image">
@@ -334,7 +350,7 @@
     </section>
 
     <div class="container-fluid">
-      <section class="projects" id="projets">
+      <section class="projects" id="projects">
         <div
           class="projects-title d-flex flex-column justify-content-center align-items-center text-center mb-5"
         >
@@ -759,7 +775,32 @@
     </footer>
 
     <script src="./assets/js/jquery.js"></script>
-    <script src="./assets/js/aos.js"></script>
-    <script src="./assets/js/bootstrap.min.js"></script>
+    <script src="./assets/js/aos/aos.js"></script>
+    <script src="./assets/js/bootstrap/bootstrap.min.js"></script>
+    <script>
+      // $(window).scroll(function () {
+      //   let wScroll = $(this).scrollTop();
+
+      //   if (wScroll > $("#about").offset().top) {
+      //     console.log("ok");
+      //     $(".item-nav:nth-child(2)").toggleClass("active");
+      //     $(".item-nav:nth-child(1)").removeClass("active");
+      //   }
+      // });
+      $(window).scrollTop(goalElement.offset().top - 90);
+
+      $(".page-scroll").on("click", function (e) {
+        const element = $(this).attr("href");
+        const goalElement = $(element);
+
+        // $(window).animate({
+        //   scrollTop: goalElement.offset().top - 90,
+        // }, 1000);
+
+        // $(window).scrollTop(goalElement.offset().top - 90);
+
+        e.preventDefault();
+      });
+    </script>
   </body>
 </html>
