--- a/platform-builder.html
+++ b/platform-builder.html
@@ -8,10 +8,10 @@
     <link rel="stylesheet" href="./assets/css/fontawesome/css/all.css" />
     <link rel="stylesheet" href="./assets/css/style.css" />
     <!-- <link rel="icon" type="image/x-icon" href="./img/favicon.ico" /> -->
-    <title>Website Builder | Nineod</title>
+    <title>Platform Builder | Nineod</title>
   </head>
   <body>
-    <header>
+    <header class="position-relative">
       <nav
         class="navbar navbar-expand-lg navbar-light bg-white fixed-top navigation"
       >
@@ -34,8 +34,8 @@
 
           <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav me-auto mb-2 mb-lg-0 nav nav-navbar">
-              <li class="nav-item mx-2 mt-4 pt-2 px-2 item-nav ">
-                <a class="nav-link link-nav " aria-current="page" href="/#home"
+              <li class="nav-item mx-2 mt-4 pt-2 px-2 item-nav">
+                <a class="nav-link link-nav" aria-current="page" href="/#home"
                   >Home</a
                 >
               </li>
@@ -51,15 +51,17 @@
                 <a class="nav-link link-nav active" href="#">Service</a>
                 <div class="dropdown-item">
                   <ul class="navbar-nav p-3 d-block">
-                    <li class="nav-item w-100 item-nav text-center active">
+                    <li class="nav-item w-100 item-nav text-center">
                       <a
-                        class="nav-link link-nav ps-1 active"
+                        class="nav-link link-nav ps-1"
                         href="website-builder.html"
                         >Website Builder</a
                       >
                     </li>
-                    <li class="nav-item w-100 item-nav text-center">
-                      <a class="nav-link link-nav ps-1" href="platform-builder.html"
+                    <li class="nav-item w-100 item-nav text-center active">
+                      <a
+                        class="nav-link link-nav ps-1 active"
+                        href="platform-builder.html"
                         >Platform Builder</a
                       >
                     </li>
@@ -81,23 +83,20 @@
       </nav>
     </header>
 
-    <section class="website-home">
-      <div class="background-dark">
+    <section class="platform-home">
+      <div class="background-dark-thin">
         <div class="container-fluid">
           <div
-            class="website-home-body d-flex flex-column justify-content-center text-center align-items-center text-white"
+            class="platform-home-body d-flex flex-column justify-content-center text-center align-items-center text-white"
           >
             <h1 class="text-capitalize mb-3 fw-light">
-              Buat Website personal Anda
+              kembangkan bisnis anda secara online
             </h1>
-            <div class="fs-5 description">
-              <p class="mb-0 fw-light">
-                Buat website portofolio Anda agar terlihat lebih professional.
-              </p>
-              <p class="mb-3 fw-light">
-                Dan tingkatkan personal branding dan juga online presence Anda.
-              </p>
-            </div>
+            <p class="mb-4 fs-5 fw-light">
+              Kembangkan Bisnis Online Anda dengan menggunakan layanan Platform
+              Builder kami
+            </p>
+
             <button
               class="btn-buat-sekarang bg-transparent text-light py-2 px-3"
             >
@@ -119,73 +118,162 @@
       />
     </a>
 
-    <section class="profesional-blog d-flex">
-      <div
-        class="profesional-blog-title justify-content-center d-flex flex-column"
-      >
-        <h1>Professional Blog</h1>
-        <p>
-          Buat blog dengan fitur menarik untuk mengembangkan jangkauan Anda dan
-          membangun komunitas.
-        </p>
-      </div>
-      <div
-        class="profesional-blog-img d-flex align-items-center justify-content-center"
-      >
-        <img src="./img/profesional-blog-img.png" alt="profesional-blog-img" />
+    <section class="section-one">
+      <div class="container-fluid d-flex">
+        <div class="row gy-4">
+          <div class="col-md-6">
+            <div class="section-one-title d-flex flex-column">
+              <h2 class="fw-bold text-black">
+                Kembangkan dan Kelola Restoran Anda
+              </h2>
+              <p class="mb-4">
+                Mulai Bangun bisnis Restoran anda, dapatkan kemudahan dalam
+                reservasi produk makanan anda.
+              </p>
+              <div class="row">
+                <div class="col-md-6">
+                  <h5 class="fw-bold mb-3">Pemesanan Online</h5>
+                  <p>
+                    Terima pesanan & terima pembayaran online anda . Biarkan
+                    pelanggan anda memesan dan melakukan pengambilan produk anda
+                    dengan mudah cepat.
+                  </p>
+                </div>
+                <div class="col-md-6">
+                  <h5 class="fw-bold mb-3">Manajemen Reservasi</h5>
+                  <p>
+                    Dapatkan Kemudahan dalam reservasi online & Kirim konfirmasi
+                    otomatis kepada pelanggan
+                  </p>
+                </div>
+                <div class="col-md-6">
+                  <h5 class="fw-bold mb-3">Custom Menu</h5>
+                  <p>
+                    Buat dan kelola menu online untuk restoran anda dan jangkau
+                    lebih banyak pembeli.
+                  </p>
+                </div>
+                <div class="col-md-6">
+                  <h5 class="fw-bold mb-3">Pembayaran Online yang Aman</h5>
+                  <p>
+                    Biarkan pelanggan membayar dengan kartu kredit, dompet
+                    digital, atau uang tunai
+                  </p>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="col-md-6">
+            <img
+              src="./img/burger_edited.jpg"
+              alt="burger_edited"
+              class="section-one-img img-fluid"
+            />
+          </div>
+        </div>
       </div>
     </section>
 
-    <section class="profesional-logo py-5">
+    <section class="section-two py-5">
       <div class="container-fluid">
         <div class="row gy-4">
           <div class="col-md-6">
             <img
-              src="./img/profesional-logo-img.jpg"
+              src="./img/b71c4b_36efeb33a7de4687b9b64ac76e03d939.jpg"
               alt="profesional-logo-img"
-              class="img-fluid w-100 h-100 profesional-logo-img"
+              class="img-fluid w-100 h-100 section-two-img"
             />
           </div>
           <div class="col-md-6">
             <div
-              class="profesional-logo-title h-100 d-flex flex-column justify-content-center"
+              class="section-two-title h-100 d-flex flex-column justify-content-center"
             >
-              <h1>Professional Logo</h1>
-              <p>
-                Rancang logo profesional untuk merek atau bisnis Anda, hak
-                komersial penuh & semua format file yang Anda butuhkan.
+              <h2 class="fw-bold text-black">Kelola Reservasi Hotel</h2>
+              <p class="mb-4">
+                Ayo Bangun Bisnis Hotel impian Anda, Dapatkan kemudahan dalam
+                reservasi hotel anda. Nikmati berbagai macam fitur untuk
+                menjangkau luas pelanggan anda.
               </p>
-              <p>
-                Sekecil apa pun logo Anda, itu memiliki peran yang cukup besar
-                untuk dimainkan. Itu akan terlihat di mana-mana, baik online
-                maupun offline. Selain itu, ini akan berfungsi sebagai tanda
-                referensi visual untuk merek Anda, dan akan mengirimkan pesan
-                perusahaan Anda kepada klien dan calon klien Anda.
-              </p>
+              <div class="row">
+                <div class="col-md-6">
+                  <h5 class="fw-bold mb-3">Sewa & Daftar Hotel Online</h5>
+                  <p>
+                    Avenir Light is a clean and stylish font favored by
+                    designers. It's easy on the eyes and a great go to font for
+                    titles, paragraphs & more.
+                  </p>
+                </div>
+                <div class="col-md-6">
+                  <h5 class="fw-bold mb-3">Kelola Reservasi</h5>
+                  <p>
+                    Avenir Light is a clean and stylish font favored by
+                    designers. It's easy on the eyes and a great go to font for
+                    titles, paragraphs & more.
+                  </p>
+                </div>
+                <div class="col-md-6">
+                  <h5 class="fw-bold mb-3">Kirim Email Informasi Instan</h5>
+                  <p>
+                    Tamu Anda akan secara otomatis mendapatkan email konfirmasi
+                    setelah mereka memesan kamar.
+                  </p>
+                </div>
+              </div>
             </div>
           </div>
         </div>
       </div>
     </section>
 
-    <section class="show-creation py-4">
-      <div class="container-fluid">
-        <div class="show-creation-content d-flex">
-          <div
-            class="show-creation-title w-50 d-flex flex-column justify-content-center"
-          >
-            <h1>Pamerkan Karya Anda Sekarang Juga</h1>
-            <p>
-              Anda bisa memamerkan karya yang anda miliki dan bangun kepercayaan
-              pelanggan anda dengan tampilan website yang sesuai dengan
-              keinginan anda.
-            </p>
+    <section class="section-one">
+      <div class="container-fluid d-flex">
+        <div class="row gy-4">
+          <div class="col-md-6">
+            <div class="section-one-title d-flex flex-column">
+              <h2 class="fw-bold text-black">
+                Buat Situs Toko Online dengan Mudah
+              </h2>
+              <p class="mb-4">
+                Mulai kembangkan bisnis anda di era digital ini, dan manfaatkan
+                fitur-fitur menarik yang kami sediakan.
+              </p>
+              <div class="row">
+                <div class="col-md-6">
+                  <h5 class="fw-bold mb-3">Pembayaran Online yang Aman</h5>
+                  <p>
+                    Terima pembayaran online yang aman & kelola semua transaksi
+                    dari dasbor Wix Anda.
+                  </p>
+                </div>
+                <div class="col-md-6">
+                  <h5 class="fw-bold mb-3">Paket & Pembayaran Berulang</h5>
+                  <p>
+                    Tawarkan berbagai paket harga, mulai jual langganan &
+                    kumpulkan pembayaran berulang.
+                  </p>
+                </div>
+                <div class="col-md-6">
+                  <h5 class="fw-bold mb-3">Produk Tak Terbatas</h5>
+                  <p>
+                    Tampilkan produk & koleksi Anda tanpa batas dan berikan opsi
+                    pengurutan & filter agar pelanggan dapat berbelanja dengan
+                    mudah.
+                  </p>
+                </div>
+                <div class="col-md-6">
+                  <h5 class="fw-bold mb-3">Jual di Marketplaces</h5>
+                  <p>
+                    Jangkau lebih banyak pembeli & jual di marketplace manapun.
+                  </p>
+                </div>
+              </div>
+            </div>
           </div>
-          <div class="show-creation-img w-50 mb-4 d-flex justify-content-end">
+          <div class="col-md-6">
             <img
-              src="./img/show-creation-img.webp"
-              alt="show-creation"
-              class="img-fluid w-75"
+              src="./img/S1.jpg"
+              alt="burger_edited"
+              class="section-one-img img-fluid"
             />
           </div>
         </div>
@@ -213,7 +301,10 @@
 
           <i class="fas fa-search"></i>
         </div>
-        <div class="accordion accordion-flush faq-dropdown" id="accordionFlushExample">
+        <div
+          class="accordion accordion-flush faq-dropdown"
+          id="accordionFlushExample"
+        >
           <div class="accordion-item">
             <h2 class="fw-bold" id="flush-headingOne">
               <button
@@ -468,7 +559,7 @@
             </h2>
             <div
               id="flush-collapseThree"
-              class="accordion-collapse collapse "
+              class="accordion-collapse collapse"
               aria-labelledby="flush-headingThree"
               data-bs-parent="#accordionFlushExample"
             >
@@ -526,11 +617,11 @@
                     menggunakan sebuah browser menggunakan URL Website.
                   </li>
                 </ul>
-                <span class="fw-semibold">‌‌‌‌APAKAH SULIT PROSES PENGGUNAAN LAYANAN NINEOD?</span>
+                <span class="fw-semibold"
+                  >‌‌‌‌APAKAH SULIT PROSES PENGGUNAAN LAYANAN NINEOD?</span
+                >
                 <ul>
-                  <li>
-                   Tentu tidak, karena kami memliki tim yang kompeten.
-                  </li>
+                  <li>Tentu tidak, karena kami memliki tim yang kompeten.</li>
                 </ul>
               </div>
             </div>
@@ -573,5 +664,6 @@
     <script src="./assets/js/jquery.js"></script>
     <script src="./assets/js/aos/aos.js"></script>
     <script src="./assets/js/bootstrap/bootstrap.min.js"></script>
+    <script></script>
   </body>
 </html>
